--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "auth0-js": "^9.6.1",
     "boardgame.io": "github:amitport/boardgame.io#allow-https",
     "core-js": "^2.5.4",
     "ng-dynamic-component": "^3.0.0",
