--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,12 @@
     "typescript": "~2.7.2"
   },
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "boardgame.io": "^0.24.0",
+    "jwks-rsa": "^1.3.0",
+    "koa": "^2.5.1",
     "koa-helmet": "^4.0.0",
+    "koa-jwt": "^3.3.2",
     "koa-mount": "^3.0.0"
   },
   "engines": {
