--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.0-beta.3",
     "@angular/cdk": "^6.3.1",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
+    "@angular/common": "^6.1.0-beta.3",
+    "@angular/compiler": "^6.1.0-beta.3",
+    "@angular/core": "^6.1.0-beta.3",
     "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
+    "@angular/forms": "^6.1.0-beta.3",
+    "@angular/http": "^6.1.0-beta.3",
     "@angular/material": "^6.3.1",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/platform-browser": "^6.1.0-beta.3",
+    "@angular/platform-browser-dynamic": "^6.1.0-beta.3",
+    "@angular/router": "^6.1.0-beta.3",
     "auth0-js": "^9.6.1",
     "boardgame.io": "github:amitport/boardgame.io#allow-https",
+    "buffer": "^5.1.0",
+    "colyseus.js": "^0.9.9",
     "core-js": "^2.5.4",
     "ng-dynamic-component": "^3.0.0",
     "ngx-init": "^0.1.0",
+    "pretty-ms": "^3.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "rxjs": "^6.0.0",
@@ -39,8 +42,8 @@
     "@angular-devkit/build-angular": "~0.7.0-rc.0",
     "@angular-devkit/build-ng-packagr": "^0.7.0-rc.0",
     "@angular/cli": "~6.1.0-rc.0",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
+    "@angular/compiler-cli": "^6.1.0-beta.3",
+    "@angular/language-service": "^6.1.0-beta.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -55,12 +58,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.3",
+    "ng-packagr": "^4.0.0-rc.3",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tsickle": ">=0.29.0",
     "tslib": "^1.9.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "^2.8.4"
   }
 }
