--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,15 @@
     "cross-env": "^5.2.0",
     "gh-pages": "^1.2.0",
     "rimraf": "^2.6.2",
-    "ts-node": "^7.0.0",
-    "typescript": "~2.7.2"
+    "ts-node": "^7.0.0"
   },
   "dependencies": {
+    "@colyseus/monitor": "^0.1.7",
     "@koa/cors": "^2.2.1",
     "boardgame.io": "^0.24.0",
+    "colyseus": "^0.9.11",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "jwks-rsa": "^1.3.0",
     "koa": "^2.5.1",
     "koa-helmet": "^4.0.0",
@@ -28,5 +31,6 @@
   },
   "engines": {
     "node": "8"
-  }
+  },
+  "false": {}
 }
