--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "koa": "^2.5.1",
     "koa-helmet": "^4.0.0",
     "koa-jwt": "^3.3.2",
-    "koa-mount": "^3.0.0"
+    "koa-mount": "^3.0.0",
+    "redux": "^3.7.2"
   },
   "engines": {
     "node": "8"
