--- a/server/package.json
+++ b/server/package.json
@@ -20,18 +20,21 @@
     "@colyseus/monitor": "^0.1.7",
     "@koa/cors": "^2.2.1",
     "boardgame.io": "^0.24.0",
-    "colyseus": "^0.9.11",
+    "colyseus": "^0.9.12",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "jwks-rsa": "^1.3.0",
+    "jws": "^3.1.5",
     "koa": "^2.5.1",
     "koa-helmet": "^4.0.0",
     "koa-jwt": "^3.3.2",
     "koa-mount": "^3.0.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5"
   },
   "engines": {
     "node": "8"
-  },
-  "false": {}
+  }
 }
