--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,6 +4,9 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true
+  },
   "exclude": [
     "src/test.ts",
     "**/*.spec.ts"
