--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0-rc.3",
+    "@angular-devkit/build-ng-packagr": "^0.7.0-rc.3",
     "@angular/cli": "~6.1.0-rc.3",
     "@angular/compiler-cli": "^6.1.0-rc.0",
     "@angular/language-service": "^6.1.0-rc.0",
@@ -58,6 +59,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.0.0-rc.3",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
