--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/turn-based-client",
+    "public": "dist/demo",
     "rewrites": [
       {
         "source": "**",
