--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "demo": {
@@ -52,6 +52,7 @@
               "projects/demo/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "projects/demo/src/styles.scss"
             ],
             "scripts": []
@@ -116,6 +117,7 @@
               "projects/demo/src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "projects/demo/src/styles.scss"
             ],
             "scripts": []
@@ -187,6 +189,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "demo"
 }
